--- a/src/components/footer-component/Footer.scss
+++ b/src/components/footer-component/Footer.scss
@@ -1,3 +1,7 @@
 .footerWrapper {
-    color: #cccccc;
+    padding-left: 64px;
+
+    @media only screen and (max-width: 375px) {
+        padding-left: 32px;
+    }
 }
