--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,8 +1,35 @@
 .app {
     height: 100vh;
+
+    .appHeading {
+        height: 32px;
+        top: 0;
+        width: 100vw;
+        text-align: center;
+        line-height: 2;
+        position: fixed;
+        font-size: 24px;
+    }
+
     .main {
         display: flex;
+        flex-direction: row-reverse;
         padding: 32px;
         height: 80vh;
+    }
+
+    @media only screen and (max-width: 375px) {
+
+        .appHeading {
+            background-color: black;
+            color: white;
+            font-size: 1rem;
+        }
+
+        .main {
+            flex-direction: column;
+            align-items: center;
+            padding: 0px;
+        }
     }
 }
