--- a/src/components/cards-component/Cards.scss
+++ b/src/components/cards-component/Cards.scss
@@ -3,4 +3,11 @@
     flex-wrap: wrap;
     padding: 32px;
     width: 70vw;
+    overflow-y: scroll;
+
+    @media only screen and (max-width: 375px) {
+        padding: 16px;
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
 }
