--- a/src/pure-components/Button/Button.scss
+++ b/src/pure-components/Button/Button.scss
@@ -10,6 +10,12 @@
     box-shadow: 0px 3px 2px 1px #888;
 }
 
+@media only screen and (max-width: 375px) {
+    .button {
+        width: 125px;
+    }
+}
+
 button:focus {
     outline: 0;
 }
